# netidx-sysinfo

./: Cargo.toml  LICENSE  README.md
src/: main.rs
