[package]
name = "netidx-sysinfo"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Publishes top-like stats from sysinfo into netidx"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
netidx = "^0.19.7"
netidx-core = "^0.18.5"
netidx-tools-core = "^0.19"
structopt = "0.3.26"
sysinfo = "0.29.0"
tokio = { version = "1", features = ["full"] }
