[package]
name = "netidx-sysinfo"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Publishes top-like stats from sysinfo into netidx"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
netidx = "^0.26"
netidx-core = "^0.26"
netidx-tools-core = "^0.26"
structopt = "0.3"
sysinfo = "0.29"
tokio = { version = "1", features = ["full"] }
